--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<title>Rock Paper Scissors</title>
 </head>
 <body>
+	<button id="rock">rock</button>
+	<button id="paper">paper</button>
+	<button id="scissors">scissors</button>
+
+	<div class="results">
+		<h4 id="roundResults"></h4>
+		<p id="userScore"></p>
+		<p id="computerScore"></p>
+		<h1 id="winner"></h1>
+	</div>
 
 	<script src="script.js"></script>
 </body>
