--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Rock Paper Scissors</title>
-</head>
-<body>
-	<button id="rock">rock</button>
-	<button id="paper">paper</button>
-	<button id="scissors">scissors</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock Paper Scissors</title>
+  </head>
+  <body>
+    <button id="rock">rock</button>
+    <button id="paper">paper</button>
+    <button id="scissors">scissors</button>
 
-	<div class="results">
-		<h4 id="roundResults"></h4>
-		<p id="userScore"></p>
-		<p id="computerScore"></p>
-		<h1 id="winner"></h1>
-	</div>
+    <div class="results">
+      <h4 id="roundResults"></h4>
+      <p id="userScore"></p>
+      <p id="computerScore"></p>
+      <h1 id="winner"></h1>
+    </div>
 
-	<script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
